# rsomics-bam-to-bed

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: expected.bed
