[package]
name = "rsomics-bam-to-bed"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-to-bed"
authors = ["Zane Leong <efd@live.com>"]
description = "Convert BAM alignments to BED6 format — Rust port of bedtools bamtobed"

[[bin]]
name = "rsomics-bam-to-bed"
path = "src/main.rs"

[lib]
name = "rsomics_bam_to_bed"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
itoa = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
uninlined_format_args = "allow"
